--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 <div class='text'>
 	<h2>Author</h2>	
-	Intro to your article. Mauris torquent velit faucibus tincidunt porta aliquam lacinia congue dapibus. Risus curabitur molestie egestas aptent hendrerit id hac at augue pharetra at sagittis. Gravida scelerisque ultrices non libero; rutrum ultrices? Sagittis semper per per semper non himenaeos. Metus parturient turpis etiam mauris sapien nisl lacus class sagittis maecenas mus! Risus vulputate, pretium cursus aenean consequat etiam fermentum sed blandit id.
+	Test
 </div>
 
 <div class='text'>
