--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 <!-- text -->
 <div class='header title step'>
 	<div class='aligner'>
-		<h1>Title</h1>
-		<h2>Sub line</h2>	
+		<h1>Voting Frequency</h1>
+		<h2>and what factors affect it</h2>	
 	</div>
 </div>
 
