--- a/index.html
+++ b/index.html
@@ -236,7 +236,254 @@
 <!-- image 1 -->
 <div class='center_aligner'>
 	<!-- change line 120 if you want to change the size of the image -->
-	<img class='small' src="images/1.jpg"> 	
+	<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<style type="text/css">
+	.tooltip {
+		font-family:'Helvetica Neue', sans-serif;
+		font-size:1em;
+		font-weight:800;
+		border:0.05em solid #1d1d1d;
+		position:fixed;
+		background-color:white;
+		opacity:0;
+		padding:2%;
+		transition:0.25s ease-in-out;
+	}
+	rect {
+		cursor:pointer;
+		transition:0.25s ease-in-out;
+	}
+	rect:hover {
+		width:3em;
+		height:3em;
+	}
+</style>
+<body>
+
+<!-- insert svg code here -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 28.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
+<style type="text/css">
+	.st0{opacity:0.26;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st1{opacity:0.27;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
+	.st2{font-family:'MyriadPro-Regular';}
+	.st3{font-size:12px;}
+	.st4{opacity:0.4;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st5{opacity:0.32;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st6{font-size:21px;}
+	.st7{fill:none;}
+	.st8{opacity:0.22;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st9{opacity:0.41;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st10{opacity:0.45;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
+	.st11{opacity:0.45;fill:#FCC3C3;stroke:#AD343E;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
+	.st12{font-size:20.8743px;}
+	.st13{fill:#F7B7B7;stroke:#009245;stroke-linecap:round;stroke-miterlimit:10;}
+	.st14{fill:#39B54A;stroke:#009245;stroke-linecap:round;stroke-miterlimit:10;}
+	.st15{fill:#DB1212;}
+	.st16{fill:#E6E7E8;stroke:#231F20;stroke-linecap:round;stroke-miterlimit:10;}
+	.st17{fill:#FCC3C3;}
+	.st18{opacity:0.37;fill:#FCC3C3;stroke:#F2AF29;stroke-width:18;stroke-linecap:round;stroke-miterlimit:10;}
+	.st19{opacity:0.49;fill:#FCC3C3;stroke:#F2AF29;stroke-width:50.8;stroke-linecap:round;stroke-miterlimit:10;}
+	.st20{opacity:0.51;fill:#FBB03B;stroke:#AD343E;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
+	.st21{opacity:0.49;fill:#8BBBB4;stroke:#AD343E;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
+	.st22{opacity:0.55;fill:#FBB03B;stroke:#8BBBB4;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
+	.st23{opacity:0.45;fill:#FBB03B;stroke:#8BBBB4;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
+	.st24{opacity:0.51;fill:#AD343E;stroke:#F2AF29;stroke-width:49.2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st25{opacity:0.28;fill:#FCC3C3;stroke:#F2AF29;stroke-width:16;stroke-linecap:round;stroke-miterlimit:10;}
+	.st26{opacity:0.34;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
+	.st27{opacity:0.38;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st28{opacity:0.44;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st29{opacity:0.17;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st30{opacity:0.36;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+</style>
+<g id="Layer_1">
+</g>
+<g id="Layer_2">
+</g>
+<g id="Layer_13">
+	<path class="st0" d="M1072.19,836.94l399.17-433.67L1072.19,836.94z"/>
+</g>
+<g id="Layer_12">
+	<line class="st1" x1="733.36" y1="754.27" x2="1039.36" y2="844.27"/>
+</g>
+<g id="Layer_11">
+	<g>
+		<text transform="matrix(1 0 0 1 1048.3569 889.2671)"><tspan x="0" y="0" class="st2 st3">High</tspan><tspan x="0" y="14.4" class="st2 st3">School</tspan></text>
+	</g>
+</g>
+<g id="Layer_10">
+	<line class="st4" x1="1070.68" y1="844.27" x2="1462.36" y2="637.27"/>
+</g>
+<g id="Layer_9">
+	<line class="st5" x1="1075.36" y1="853.27" x2="1462.36" y2="844.27"/>
+</g>
+<g id="Layer_8">
+	<line class="st1" x1="733.67" y1="740.19" x2="1030.36" y2="628.27"/>
+</g>
+<g id="Layer_7">
+	<text transform="matrix(1 0 0 1 1030.3569 448.267)" class="st2 st3">College</text>
+</g>
+<g id="Layer_6">
+	<text transform="matrix(1 0 0 1 655.3818 231.8187)" class="st2 st6">GENDER</text>
+</g>
+<g id="Layer_5">
+	<text transform="matrix(1 0 0 1 994.3574 232.2672)" class="st2 st6">EDUCATION</text>
+</g>
+<g id="Layer_4">
+	<rect x="1030.36" y="658.75" class="st7" width="66.56" height="74.04"/>
+	<text transform="matrix(1 0 0 1 1030.3569 667.2676)"><tspan x="0" y="0" class="st2 st3">Some </tspan><tspan x="0" y="14.4" class="st2 st3">College</tspan></text>
+</g>
+<g id="Layer_3">
+	<line class="st8" x1="1060.05" y1="636.4" x2="1462.36" y2="826.27"/>
+</g>
+<g id="Layer_19">
+	<line class="st9" x1="1055.31" y1="630.22" x2="1462.36" y2="637.27"/>
+</g>
+<g id="Layer_18">
+	<line class="st10" x1="724.36" y1="736.27" x2="1030.36" y2="412.27"/>
+	<line class="st11" x1="1031.38" y1="411.21" x2="704.38" y2="489.2"/>
+	<line class="st11" x1="1048.36" y1="610.27" x2="722.38" y2="489.2"/>
+</g>
+<g id="Layer_17">
+	<text transform="matrix(1 0 0 1 1498.3569 628.267)" class="st2 st3">Sporadic</text>
+</g>
+<g id="Layer_16">
+	<rect x="1480.36" y="826.27" class="st7" width="90" height="54"/>
+	<text transform="matrix(1 0 0 1 1480.3569 834.7866)" class="st2 st3">Rarely/Never</text>
+</g>
+<g id="Layer_15">
+	<text transform="matrix(1 0 0 1 1421.5708 231.8187)" class="st2 st6">VOTER FREQUENCY</text>
+</g>
+<g id="Layer_14">
+	<text transform="matrix(1.006 0 0 1 319.3569 232.267)" class="st2 st12">RACE</text>
+</g>
+<g id="Layer_44">
+	<circle class="st13" cx="354.52" cy="646.27" r="18"/>
+	<circle class="st14" cx="345.28" cy="1002.97" r="18"/>
+	<circle class="st7" cx="345.28" cy="341.32" r="18"/>
+	<text transform="matrix(1 0 0 1 330.8086 377.269)" class="st2 st3">Black Respondent</text>
+	<rect x="529.45" y="411.07" class="st7" width="4.26" height="1.7"/>
+</g>
+<g id="Layer_43">
+	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">White Respondent</text>
+</g>
+<g id="Layer_42">
+	<circle class="st16" cx="704.38" cy="489.2" r="18"/>
+</g>
+<g id="Layer_41">
+	<text transform="matrix(1 0 0 1 688.3564 520.2672)" class="st2 st3">Female</text>
+</g>
+<g id="Layer_40">
+	<circle class="st16" cx="714.52" cy="745.27" r="18"/>
+</g>
+<g id="Layer_39">
+	<text transform="matrix(1 0 0 1 706.3564 781.267)" class="st2 st3">Male</text>
+</g>
+<g id="Layer_38">
+	<circle class="st16" cx="1048.36" cy="412.27" r="18"/>
+</g>
+<g id="Layer_37">
+	<circle class="st16" cx="1048.36" cy="628.27" r="18"/>
+</g>
+<g id="Layer_36">
+	<circle class="st16" cx="1057.36" cy="853.27" r="18"/>
+</g>
+<g id="Layer_35">
+	<line class="st17" x1="373.36" y1="637.27" x2="688.36" y2="493.27"/>
+</g>
+<g id="Layer_34">
+	<line class="st18" x1="730.68" y1="495.86" x2="1039.93" y2="421.8"/>
+</g>
+<g id="Layer_33">
+	
+		<line onmouseover="updateTooltip('50%')" onmouseout="clearTooltip()" class="st19" x1="706.36" y1="493.27" x2="365.85" y2="631.05"/>
+	
+		<line onmouseover="updateTooltip('51%')" onmouseout="clearTooltip()" class="st20" x1="704.38" y1="480.82" x2="354.52" y2="341.32"/>
+	
+		<line onmouseover="updateTooltip('49%')" onmouseout="clearTooltip()" class="st21" x1="714.52" y1="745.27" x2="345.28" y2="341.32"/>
+	
+		<line onmouseover="updateTooltip('55%')" onmouseout="clearTooltip()" class="st22" x1="345.28" y1="1002.97" x2="714.52" y2="745.27"/>
+	
+		<line onmouseover="updateTooltip('45%')" onmouseout="clearTooltip()" class="st23" x1="345.28" y1="1002.97" x2="706.36" y2="493.27"/>
+	<text transform="matrix(1 0 0 1 309.2329 1029.9404)" class="st2 st3">Hispanic Respondent</text>
+</g>
+<g id="Layer_32">
+	<line onmouseover="updateTooltip('51%')" onmouseout="clearTooltip()" class="st24" x1="370" y1="654.2" x2="706.54" y2="749.05"/>
+</g>
+<g id="Layer_31">
+	<line class="st25" x1="732.52" y1="500.87" x2="1035.28" y2="625.61"/>
+</g>
+<g id="Layer_30">
+	<line class="st26" x1="724.4" y1="494.7" x2="1065.49" y2="835.78"/>
+</g>
+<g id="Layer_29">
+	<rect x="1468.19" y="352.27" class="st16" width="107" height="152"/>
+</g>
+<g id="Layer_28">
+	<text transform="matrix(1 0 0 1 1498.3569 430.267)" class="st2 st3">Always</text>
+</g>
+<g id="Layer_27">
+	<text transform="matrix(1 0 0 1 1498.3569 628.267)" class="st2 st3">Sporadic</text>
+</g>
+<g id="Layer_26">
+	<text transform="matrix(1 0 0 1 1489.3569 826.267)" class="st2 st3">Rarely/never</text>
+</g>
+<g id="Layer_25">
+	<rect x="1468.19" y="746.27" class="st16" width="107" height="152"/>
+</g>
+<g id="Layer_24">
+	<rect x="1468.19" y="549.27" class="st16" width="107" height="152"/>
+</g>
+<g id="Layer_23">
+	<path class="st27" d="M1066.36,403.27l396,9L1066.36,403.27z"/>
+</g>
+<g id="Layer_22">
+	<line class="st28" x1="1055.31" y1="414.22" x2="1462.36" y2="619.27"/>
+</g>
+<g id="Layer_21">
+	<line class="st29" x1="1060.05" y1="420.4" x2="1462.36" y2="826.27"/>
+</g>
+<g id="Layer_20">
+	<path class="st30" d="M1066.36,619.27l396-207L1066.36,619.27z"/>
+</g>
+</svg>
+
+<!-- end svg code here -->
+
+<div class="tooltip"></div>
+
+</body>
+<script type="text/javascript">
+
+let tooltip=document.querySelector('.tooltip')
+
+// gets position of mouse on the page
+function getpos(event) {
+	var e = window.event;
+	x = e.clientX ;
+	y = e.clientY ;
+} 
+
+function updateTooltip(text_to_display){
+	tooltip.innerHTML=text_to_display
+	getpos()
+	tooltip.style.opacity=1
+	tooltip.style.left=x+30+"px"
+	tooltip.style.top=y-30+"px"
+}
+
+function clearTooltip() {
+	tooltip.style.opacity=0
+}
+
+</script>
+</html>
 </div>
 <!-- caption for image 1 -->
 <div class='center_aligner'>
