--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		font-family:'Helvetica Neue', sans-serif;
 	}
 	nav	{
-		background-color:white;
+		background-color:#f7f7f3;
 		position:fixed;
 		width:100%;
 		display:flex;
@@ -27,7 +27,7 @@
 	}
 	.title {
 		height:50vh;
-		color:white;
+		color:#f7f7f3;
 		background-color:black;
 /*		background-image:url('https://i.pinimg.com/originals/7f/43/1c/7f431c9e6991b1a83d79e359dc09c99d.gif');*/
 		background-repeat: no-repeat;
@@ -65,11 +65,11 @@
 		position:sticky;
 		width:50%;
 		display:inline-flex;
-					background-color:white;
+					background-color:#f7f7f3;
 	}
 	.leftside{
 		background-color:black;
-		color:white;
+		color:#f7f7f3;
 		width: 30%;
     	padding: 5% 10% 5% 5%;
 	}
@@ -248,7 +248,7 @@
 		font-weight:800;
 		border:0.05em solid #1d1d1d;
 		position:fixed;
-		background-color:white;
+		background-color:#f7f7f3;
 		opacity:0;
 		padding:2%;
 		transition:0.25s ease-in-out;
@@ -371,7 +371,7 @@
 	<rect x="529.45" y="411.07" class="st7" width="4.26" height="1.7"/>
 </g>
 <g id="Layer_43">
-	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">White Respondent</text>
+	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">#f7f7f3 Respondent</text>
 </g>
 <g id="Layer_42">
 	<circle class="st16" cx="704.38" cy="489.2" r="18"/>
