--- a/index.html
+++ b/index.html
@@ -217,19 +217,14 @@
 <div class='header title step'>
 	<div class='aligner'>
 		<h1>Voting Frequency</h1>
-		<h2>and what factors affect it</h2>	
+		<h2>and the factors that affect it</h2>	
 	</div>
 </div>
-
-
-<div class='text'>
-	<h2>Author</h2>	
-	Test11
-</div>
+	
 
 <div class='text'>
-	<h1>Test12</h1>
-	Sollicitudin, feugiat nibh diam. Mus placerat cras blandit cursus tempus curae; turpis, scelerisque curae; mauris cursus. Dictumst volutpat etiam nec nisl sapien risus? Auctor semper quisque, arcu penatibus tempus torquent. Nostra; phasellus penatibus primis nam ridiculus nunc? Dui suscipit habitant ante platea luctus ridiculus hac! Hendrerit mollis vitae ultricies habitant cum laoreet, in fames magnis. Himenaeos lacus cum ullamcorper aptent class quisque netus duis phasellus non etiam scelerisque.
+	<h1>How can we get people to vote?</h1>
+	The question of how to increase voter participation in politics has plagued all electoral parties in the last couple of decades. Many voters have seen the effect of this: Get Out The Vote ads, voter registration drives, flooded email inboxes and mailboxes alike. But are voters aware of why they vote in the patterns they do?
 </div>
 
 
@@ -487,10 +482,14 @@ function clearTooltip() {
 </div>
 <!-- caption for image 1 -->
 <div class='center_aligner'>
-	<div class='caption'>How mood was measured during the event</div>	
+	<div class='caption'>Some of the different factors that affect a person's voting frequency</div>	
 </div>
 
-
+<div class='text'>
+	<h1>Voter Frequency at a Glance</h1>
+	Take a look at the following charts. What are some figures that stand out for you?
+</div>
+	
 <!-- tableau public -->
 <div class='center_aligner'>
 	<!-- insert tableau public embed link below this line -->
@@ -498,8 +497,7 @@ function clearTooltip() {
 </div>
 
 <div class='text'>
-	<h1>How does month influence measured indicators?</h1>
-	Sollicitudin, feugiat nibh diam. Mus placerat cras blandit cursus tempus curae; turpis, scelerisque curae; mauris cursus. Dictumst volutpat etiam nec nisl sapien risus? Auctor semper quisque, arcu penatibus tempus torquent. Nostra; phasellus penatibus primis nam ridiculus nunc? Explore in the interactive below.
+	 The table at the top right us that college-educated people with incomes of over $125k are very likely to vote sporadically. On the other hand, high school graduates with less than $40k income are by far the most likely to rarely/never vote. As you can see from the bar chart, In general, people with some college education have the smallest differentiation in distribution of voter categories; college educated and high school educated people are more varied in their voting categories.
 </div>
 
 <!-- interactive embed, adjust the width and height as necessary, copy lines 155 to 157 to create a new interactive embed --> 
