--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://unpkg.com/intersection-observer"></script>
 	<script src="https://unpkg.com/scrollama"></script>
 </head>
+<body style="background-color:#33475b">
 <style type="text/css">
 	body, html {
 		top:0;
