--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@ function clearTooltip() {
 
 
 <!-- counter -->
+<div class='header sticky step' id='dynamic_sticky1'>
 <!DOCTYPE html>
 <html>
 <head>
@@ -1215,7 +1216,7 @@ function clearTooltip() {
 </script>
 </html>
 </div>
-
+</div>
 
 <div class='leftside'>
 
