--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		top:0;
 		left:0;
 		margin:0;
-		font-family:'Helvetica Neue', sans-serif;
+		font-family:'Krub', sans-serif;
 	}
 	nav	{
 		background-color:#f7f7f3;
@@ -56,7 +56,7 @@
 		animation: fadeIn 0.5s ease-in-out;
 	}
 	.header h1{
-		font-family:'Helvetica Neue', sans-serif;
+		font-family:'Krub', sans-serif;
 		font-weight:800;
 		margin:0;
 	}
@@ -242,7 +242,7 @@
 </head>
 <style type="text/css">
 	.tooltip {
-		font-family:'Helvetica Neue', sans-serif;
+		font-family:'Krub', sans-serif;
 		font-size:1em;
 		font-weight:800;
 		border:0.05em solid #1d1d1d;
