--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,700;1,200;1,500&display=swap" rel="stylesheet">
 	<title>Prototype techniques</title>
 	<link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
@@ -17,7 +14,7 @@
 		top:0;
 		left:0;
 		margin:0;
-		font-family:'Krub', sans-serif;
+		font-family:'Helvetica Neue', sans-serif;
 	}
 	nav	{
 		background-color:#f7f7f3;
@@ -56,7 +53,7 @@
 		animation: fadeIn 0.5s ease-in-out;
 	}
 	.header h1{
-		font-family:'Krub', sans-serif;
+		font-family:'Helvetica Neue', sans-serif;
 		font-weight:800;
 		margin:0;
 	}
@@ -242,13 +239,13 @@
 </head>
 <style type="text/css">
 	.tooltip {
-		font-family:'Krub', sans-serif;
+		font-family:'Helvetica Neue', sans-serif;
 		font-size:1em;
 		font-weight:800;
 		border:0.05em solid #1d1d1d;
 		position:fixed;
 		background-color:#f7f7f3;
-		opacity:100;
+		opacity:0;
 		padding:2%;
 		transition:0.25s ease-in-out;
 	}
@@ -524,7 +521,25 @@ function clearTooltip() {
 	<title></title>
 </head>
 <style type="text/css">
-
+	.tooltip {
+		font-family:'Helvetica Neue', sans-serif;
+		font-size:1em;
+		font-weight:800;
+		border:0.05em solid #1d1d1d;
+		position:fixed;
+		background-color:white;
+		opacity:0;
+		padding:2%;
+		transition:0.25s ease-in-out;
+	}
+	rect {
+		cursor:pointer;
+		transition:0.25s ease-in-out;
+	}
+	rect:hover {
+		width:3em;
+		height:3em;
+	}
 </style>
 <body>
 
@@ -1269,6 +1284,16 @@ scroller2
     // { element, index, direction }
     el=response.element;
     el.style.opacity=1;
+    if(response.index==0 || 1 || 2){
+    	stick('dynamic_sticky1')
+    	response.direction=='down'
+    	if(response.index==0){
+    		count(1,16,1,'Energy','after a 15 minute break','dynamic_sticky1')
+    	} else if (response.index==1){
+    		count(1,3.8,.1,'Engagement','average','dynamic_sticky1')
+    	} else if (response.index==2){
+    		count(0,0.9,.1,'Mood','increase','dynamic_sticky1')
+    	}
     }
   })
   .onStepExit(response => {
