--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="https://unpkg.com/intersection-observer"></script>
 	<script src="https://unpkg.com/scrollama"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,700;1,200;1,500&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:#f7f7f3">
 <style type="text/css">
