--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ function clearTooltip() {
 
 <!-- image 3 -->
 <div class='center_aligner'>
-	<img class='large' src="images/2.png"> 	
+	<img class='large' src="Untitled-3.ai"> 	
 </div>
 
 </body>
