--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ function clearTooltip() {
 
 <div class='text'>
 	<h1>Voter Frequency at a Glance</h1>
-	Take a look at the following charts. What are some figures that stand out for you?
+	Take a look at the following charts. Click on different voter frequency colors to see what factors affect them. What are some figures that stand out to you?
 </div>
 	
 <!-- tableau public -->
@@ -508,6 +508,13 @@ function clearTooltip() {
 <div class='center_aligner'>
 	<iframe src="interactive.html" frameBorder=0 scrolling=no></iframe>
 </div>
+
+
+<div class='text'>
+	<h1>What main factors influence measured indicators?</h1>
+	Sollicitudin, feugiat nibh diam. Mus placerat cras blandit cursus tempus curae; turpis, scelerisque curae; mauris cursus. Dictumst volutpat etiam nec nisl sapien risus? Auctor semper quisque, arcu penatibus tempus torquent. Nostra; phasellus penatibus primis nam ridiculus nunc? Dui suscipit habitant ante platea luctus ridiculus hac! Hendrerit mollis vitae ultricies habitant cum laoreet, in fames magnis. Himenaeos lacus cum ullamcorper aptent class quisque netus duis phasellus non etiam scelerisque.
+</div>
+
 <!DOCTYPE html>
 <html>
 <head>
