--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 	<rect x="529.45" y="411.07" class="st7" width="4.26" height="1.7"/>
 </g>
 <g id="Layer_43">
-	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">#f7f7f3 Respondent</text>
+	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">White Respondent</text>
 </g>
 <g id="Layer_42">
 	<circle class="st16" cx="704.38" cy="489.2" r="18"/>
@@ -1465,122 +1465,3 @@ function unstick(location_id){
 }
 
 </script>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<style type="text/css">
-	.tooltip {
-		font-family:'Helvetica Neue', sans-serif;
-		font-size:1em;
-		font-weight:800;
-		border:0.05em solid #1d1d1d;
-		position:fixed;
-		background-color:white;
-		opacity:0;
-		padding:2%;
-		transition:0.25s ease-in-out;
-	}
-	rect {
-		cursor:pointer;
-		transition:0.25s ease-in-out;
-	}
-	rect:hover {
-		width:3em;
-		height:3em;
-	}
-</style>
-<body>
-
-<!-- insert svg code here -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 28.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#AD343E;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
-	.st1{fill:#F2AF29;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
-	.st2{fill:#8BBBB4;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:37.9925px;}
-	.st5{fill:none;}
-</style>
-<g>
-	<g>
-		<g>
-			<rect x="1301.62" y="241.39" class="st0" width="101.31" height="68.49"/>
-			<g>
-				<path class="st0" d="M841.71,583.83H542.08c0-164.49,135.14-299.63,299.63-299.63V583.83z"/>
-			</g>
-		</g>
-		<g>
-			<rect x="1301.62" y="344.12" class="st1" width="101.31" height="68.49"/>
-			<g>
-				<path class="st1" d="M841.71,583.83l279.73,107.38c-59.3,154.49-232.62,231.66-387.11,172.35
-					c-118.03-45.31-192.26-153.3-192.26-279.73H841.71z"/>
-			</g>
-		</g>
-		<g>
-			<rect x="1301.62" y="446.85" class="st2" width="101.31" height="68.49"/>
-			<g>
-				<path class="st2" d="M841.71,583.83V284.19c165.48,0,299.63,134.15,299.63,299.63c0,39.88-5.61,70.15-19.9,107.38L841.71,583.83
-					z"/>
-			</g>
-		</g>
-	</g>
-	<g>
-		<g>
-		</g>
-		<g>
-		</g>
-		<g>
-		</g>
-	</g>
-	<g>
-		<text transform="matrix(1 0 0 1 1415.5978 289.8785)"><tspan x="0" y="0" class="st3 st4">r</tspan><tspan x="12.23" y="0" class="st3 st4">a</tspan><tspan x="30.55" y="0" class="st3 st4">r</tspan><tspan x="42.59" y="0" class="st3 st4">ely/ne</tspan><tspan x="141.63" y="0" class="st3 st4">v</tspan><tspan x="159.53" y="0" class="st3 st4">er</tspan></text>
-		<text transform="matrix(1 0 0 1 1415.5978 392.6105)"><tspan x="0" y="0" class="st3 st4">spo</tspan><tspan x="57.52" y="0" class="st3 st4">r</tspan><tspan x="69.75" y="0" class="st3 st4">adic</tspan></text>
-		<text transform="matrix(1 0 0 1 1415.5978 495.3419)"><tspan x="0" y="0" class="st3 st4">al</tspan><tspan x="27.28" y="0" class="st3 st4">w</tspan><tspan x="55.09" y="0" class="st3 st4">a</tspan><tspan x="73.1" y="0" class="st3 st4">y</tspan><tspan x="90.76" y="0" class="st3 st4">s</tspan></text>
-	</g>
-</g>
-<path class="st2" d="M869.19,539.43"/>
-<path class="st2" d="M871.56,313.61"/>
-<path onmouseover="updateTooltip('44.11%')" class="st5" d="M962.94,868.58H588.78c-6.6,0-12-5.4-12-12V644.42c0-6.6,5.4-12,12-12
-	h374.16c6.6,0,12,5.4,12,12v212.16C974.94,863.18,969.54,868.58,962.94,868.58z"/>
-<path onmouseover="updateTooltip('31.03%')" class="st5" d="M1111.53,582.51H883.56c-6.6,0-12-5.4-12-12V375.53c0-6.6,5.4-12,12-12
-	h227.96c6.6,0,12,5.4,12,12v194.98C1123.53,577.1,1118.13,582.51,1111.53,582.51z"/>
-<path onmouseover="updateTooltip('24.86%')" class="st5" d="M772.04,560H654.78c-35.3,0-64.18-28.88-64.18-64.18v-58.67
-	c0-35.3,28.88-64.18,64.18-64.18h117.25c35.3,0,64.18,28.88,64.18,64.18v58.67C836.22,531.12,807.34,560,772.04,560z"/>
-</svg>
-
-<!-- end svg code here -->
-
-<div class="tooltip"></div>
-
-</body>
-<script type="text/javascript">
-
-let tooltip=document.querySelector('.tooltip')
-
-// gets position of mouse on the page
-function getpos(event) {
-	var e = window.event;
-	x = e.clientX ;
-	y = e.clientY ;
-} 
-
-function updateTooltip(text_to_display){
-	tooltip.innerHTML=text_to_display
-	getpos()
-	tooltip.style.opacity=1
-	tooltip.style.left=x+30+"px"
-	tooltip.style.top=y-30+"px"
-}
-
-function clearTooltip() {
-	tooltip.style.opacity=0
-}
-
-</script>
-</html>
