--- a/index.html
+++ b/index.html
@@ -266,191 +266,152 @@
 <!-- insert svg code here -->
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 28.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
 <style type="text/css">
-	.st0{opacity:0.26;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st1{opacity:0.27;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
-	.st2{font-family:'MyriadPro-Regular';}
-	.st3{font-size:12px;}
-	.st4{opacity:0.4;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st5{opacity:0.32;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st6{font-size:21px;}
-	.st7{fill:none;}
-	.st8{opacity:0.22;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st9{opacity:0.41;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st10{opacity:0.45;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
-	.st11{opacity:0.45;fill:#FCC3C3;stroke:#AD343E;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
-	.st12{font-size:20.8743px;}
-	.st13{fill:#F7B7B7;stroke:#009245;stroke-linecap:round;stroke-miterlimit:10;}
-	.st14{fill:#39B54A;stroke:#009245;stroke-linecap:round;stroke-miterlimit:10;}
-	.st15{fill:#DB1212;}
-	.st16{fill:#E6E7E8;stroke:#231F20;stroke-linecap:round;stroke-miterlimit:10;}
-	.st17{fill:#FCC3C3;}
-	.st18{opacity:0.37;fill:#FCC3C3;stroke:#F2AF29;stroke-width:18;stroke-linecap:round;stroke-miterlimit:10;}
-	.st19{opacity:0.49;fill:#FCC3C3;stroke:#F2AF29;stroke-width:50.8;stroke-linecap:round;stroke-miterlimit:10;}
-	.st20{opacity:0.51;fill:#FBB03B;stroke:#AD343E;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
-	.st21{opacity:0.49;fill:#8BBBB4;stroke:#AD343E;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
-	.st22{opacity:0.55;fill:#FBB03B;stroke:#8BBBB4;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
-	.st23{opacity:0.45;fill:#FBB03B;stroke:#8BBBB4;stroke-width:49;stroke-linecap:round;stroke-miterlimit:10;}
-	.st24{opacity:0.51;fill:#AD343E;stroke:#F2AF29;stroke-width:49.2;stroke-linecap:round;stroke-miterlimit:10;}
-	.st25{opacity:0.28;fill:#FCC3C3;stroke:#F2AF29;stroke-width:16;stroke-linecap:round;stroke-miterlimit:10;}
-	.st26{opacity:0.34;fill:#FCC3C3;stroke:#F2AF29;stroke-width:15;stroke-linecap:round;stroke-miterlimit:10;}
-	.st27{opacity:0.38;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st28{opacity:0.44;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st29{opacity:0.17;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
-	.st30{opacity:0.36;fill:none;stroke:#F2AF29;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+	.st0{fill:none;stroke:#000000;stroke-miterlimit:10;}
+	.st1{opacity:0.55;fill:#AD343E;stroke:#AD343E;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st2{fill:none;stroke:#AD343E;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st3{opacity:0.49;fill:#F2AF29;stroke:#F2AF29;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st4{fill:none;stroke:#F2AF29;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st5{opacity:0.59;fill:#F2AF29;stroke:#F2AF29;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st6{opacity:0.54;fill:#8BBBB4;stroke:#8BBBB4;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st7{fill:none;stroke:#8BBBB4;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st8{fill:#AD343E;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st9{fill:#F2AF29;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st10{fill:#8BBBB4;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st11{font-family:'MyriadPro-Regular';}
+	.st12{font-size:50.0152px;}
+	.st13{opacity:0.43;fill:#8BBBB4;stroke:#8BBBB4;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st14{opacity:0.58;fill:#AD343E;stroke:#AD343E;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+	.st15{fill:none;}
 </style>
-<g id="Layer_1">
-</g>
-<g id="Layer_2">
-</g>
-<g id="Layer_13">
-	<path class="st0" d="M1072.19,836.94l399.17-433.67L1072.19,836.94z"/>
-</g>
-<g id="Layer_12">
-	<line class="st1" x1="733.36" y1="754.27" x2="1039.36" y2="844.27"/>
-</g>
-<g id="Layer_11">
+<g>
 	<g>
-		<text transform="matrix(1 0 0 1 1048.3569 889.2671)"><tspan x="0" y="0" class="st2 st3">High</tspan><tspan x="0" y="14.4" class="st2 st3">School</tspan></text>
+		<path class="st0" d="M1032.75,580.2c0,172.83-155.11,312.94-327.94,312.94S406.86,753.04,406.86,580.2S546.97,267.26,719.8,267.26
+			S1032.75,407.37,1032.75,580.2z"/>
+		<g>
+			<g>
+				<line class="st0" x1="719.8" y1="267.26" x2="719.8" y2="282.9"/>
+				<line class="st0" x1="990.82" y1="736.67" x2="977.27" y2="728.85"/>
+				<line class="st0" x1="448.79" y1="736.67" x2="462.34" y2="728.85"/>
+			</g>
+			<g>
+			</g>
+		</g>
+	</g>
+	<g>
+		<line class="st0" x1="719.8" y1="580.2" x2="719.8" y2="267.26"/>
+		<g>
+			<g>
+				<line class="st0" x1="711.98" y1="528.04" x2="727.63" y2="528.04"/>
+				<line class="st0" x1="711.98" y1="475.89" x2="727.63" y2="475.89"/>
+				<line class="st0" x1="711.98" y1="423.73" x2="727.63" y2="423.73"/>
+				<line class="st0" x1="711.98" y1="371.57" x2="727.63" y2="371.57"/>
+				<line class="st0" x1="711.98" y1="319.41" x2="727.63" y2="319.41"/>
+			</g>
+			<g>
+			</g>
+		</g>
+	</g>
+	<g>
+		<line class="st0" x1="719.8" y1="580.2" x2="990.82" y2="736.67"/>
+		<g>
+			<g>
+				<line class="st0" x1="768.88" y1="599.5" x2="761.06" y2="613.05"/>
+				<line class="st0" x1="814.05" y1="625.58" x2="806.23" y2="639.13"/>
+				<line class="st0" x1="859.22" y1="651.66" x2="851.4" y2="665.21"/>
+				<line class="st0" x1="904.39" y1="677.74" x2="896.57" y2="691.29"/>
+				<line class="st0" x1="949.56" y1="703.82" x2="941.74" y2="717.37"/>
+			</g>
+			<g>
+			</g>
+		</g>
+	</g>
+	<g>
+		<line class="st0" x1="719.8" y1="580.2" x2="448.79" y2="736.67"/>
+		<g>
+			<g>
+				<line class="st0" x1="678.55" y1="613.05" x2="670.72" y2="599.5"/>
+				<line class="st0" x1="633.38" y1="639.13" x2="625.55" y2="625.58"/>
+				<line class="st0" x1="588.21" y1="665.21" x2="580.38" y2="651.66"/>
+				<line class="st0" x1="543.04" y1="691.29" x2="535.21" y2="677.74"/>
+				<line class="st0" x1="497.87" y1="717.37" x2="490.04" y2="703.82"/>
+			</g>
+			<g>
+			</g>
+		</g>
+	</g>
+	<g>
+		<g>
+			<rect x="1315.98" y="372.24" class="st1" width="133.37" height="71.53"/>
+			<g>
+				<line class="st2" x1="809.46" y1="631.97" x2="719.8" y2="432.6"/>
+				<polyline class="st2" points="551.09,677.6 719.8,432.6 809.46,631.97 551.09,677.6 				"/>
+			</g>
+		</g>
+		<g>
+			<rect x="1315.98" y="479.53" class="st3" width="133.37" height="71.53"/>
+			<g>
+				<line class="st4" x1="862.31" y1="662.48" x2="719.8" y2="473.02"/>
+				<polyline class="st4" points="548.09,680.6 862.31,662.48 549.51,678.52 				"/>
+				<path class="st5" d="M549.51,678.52l-1.42,2.09l0,0l0,0c0,0,165.71-201.59,168.71-204.59s3-3,3-3L548.09,680.6L719.8,473.02
+					l142.51,189.46"/>
+			</g>
+		</g>
+		<g>
+			<rect x="1315.98" y="586.83" class="st6" width="133.37" height="71.53"/>
+			<g>
+				<line class="st7" x1="815.34" y1="635.36" x2="719.8" y2="362.7"/>
+				<polyline class="st7" points="719.8,362.7 477.47,720.11 815.34,635.36 477.47,720.11 				"/>
+			</g>
+		</g>
+	</g>
+	<g>
+		<g>
+			<g>
+				<rect x="716.8" y="429.6" class="st8" width="6" height="6"/>
+				<rect x="806.46" y="628.97" class="st8" width="6" height="6"/>
+				<rect x="548.09" y="674.6" class="st8" width="6" height="6"/>
+			</g>
+		</g>
+		<g>
+			<g>
+				<rect x="716.8" y="470.02" class="st9" width="6" height="6"/>
+				<rect x="859.31" y="659.48" class="st9" width="6" height="6"/>
+				<rect x="546.51" y="675.52" class="st9" width="6" height="6"/>
+			</g>
+		</g>
+		<g>
+			<g>
+				<polygon class="st10" points="716.8,359.7 722.8,365.7 716.8,365.7 				"/>
+				<rect x="812.34" y="632.36" class="st10" width="6" height="6"/>
+				<rect x="474.47" y="717.11" class="st10" width="6" height="6"/>
+			</g>
+		</g>
+	</g>
+	<g>
+		<g>
+		</g>
+		<text transform="matrix(1 0 0 1 1466.0234 426.7581)"><tspan x="0" y="0" class="st11 st12">S</tspan><tspan x="24.96" y="0" class="st11 st12">ome </tspan><tspan x="129.79" y="0" class="st11 st12">c</tspan><tspan x="151.89" y="0" class="st11 st12">ollege</tspan></text>
+		<text transform="matrix(1 0 0 1 1466.0234 534.053)"><tspan x="0" y="0" class="st11 st12">H</tspan><tspan x="33.11" y="0" class="st11 st12">igh school or less</tspan></text>
+		<text transform="matrix(1 0 0 1 1466.0234 641.3484)"><tspan x="0" y="0" class="st11 st12">C</tspan><tspan x="28.46" y="0" class="st11 st12">ollege</tspan></text>
+	</g>
+	<g>
+		<text transform="matrix(1 0 0 1 236.6548 774.9873)"><tspan x="0" y="0" class="st11 st12">spo</tspan><tspan x="75.72" y="0" class="st11 st12">r</tspan><tspan x="91.83" y="0" class="st11 st12">adic</tspan></text>
+		<text transform="matrix(1 0 0 1 1024.6978 774.9873)"><tspan x="0" y="0" class="st11 st12">r</tspan><tspan x="16.11" y="0" class="st11 st12">a</tspan><tspan x="40.21" y="0" class="st11 st12">r</tspan><tspan x="56.07" y="0" class="st11 st12">ely/ne</tspan><tspan x="186.45" y="0" class="st11 st12">v</tspan><tspan x="210.01" y="0" class="st11 st12">er</tspan></text>
+		<text transform="matrix(1 0 0 1 650.1577 215.6342)"><tspan x="0" y="0" class="st11 st12">al</tspan><tspan x="35.91" y="0" class="st11 st12">w</tspan><tspan x="72.52" y="0" class="st11 st12">a</tspan><tspan x="96.23" y="0" class="st11 st12">y</tspan><tspan x="119.49" y="0" class="st11 st12">s</tspan></text>
 	</g>
 </g>
-<g id="Layer_10">
-	<line class="st4" x1="1070.68" y1="844.27" x2="1462.36" y2="637.27"/>
-</g>
-<g id="Layer_9">
-	<line class="st5" x1="1075.36" y1="853.27" x2="1462.36" y2="844.27"/>
-</g>
-<g id="Layer_8">
-	<line class="st1" x1="733.67" y1="740.19" x2="1030.36" y2="628.27"/>
-</g>
-<g id="Layer_7">
-	<text transform="matrix(1 0 0 1 1030.3569 448.267)" class="st2 st3">College</text>
-</g>
-<g id="Layer_6">
-	<text transform="matrix(1 0 0 1 655.3818 231.8187)" class="st2 st6">GENDER</text>
-</g>
-<g id="Layer_5">
-	<text transform="matrix(1 0 0 1 994.3574 232.2672)" class="st2 st6">EDUCATION</text>
-</g>
-<g id="Layer_4">
-	<rect x="1030.36" y="658.75" class="st7" width="66.56" height="74.04"/>
-	<text transform="matrix(1 0 0 1 1030.3569 667.2676)"><tspan x="0" y="0" class="st2 st3">Some </tspan><tspan x="0" y="14.4" class="st2 st3">College</tspan></text>
-</g>
-<g id="Layer_3">
-	<line class="st8" x1="1060.05" y1="636.4" x2="1462.36" y2="826.27"/>
-</g>
-<g id="Layer_19">
-	<line class="st9" x1="1055.31" y1="630.22" x2="1462.36" y2="637.27"/>
-</g>
-<g id="Layer_18">
-	<line class="st10" x1="724.36" y1="736.27" x2="1030.36" y2="412.27"/>
-	<line class="st11" x1="1031.38" y1="411.21" x2="704.38" y2="489.2"/>
-	<line class="st11" x1="1048.36" y1="610.27" x2="722.38" y2="489.2"/>
-</g>
-<g id="Layer_17">
-	<text transform="matrix(1 0 0 1 1498.3569 628.267)" class="st2 st3">Sporadic</text>
-</g>
-<g id="Layer_16">
-	<rect x="1480.36" y="826.27" class="st7" width="90" height="54"/>
-	<text transform="matrix(1 0 0 1 1480.3569 834.7866)" class="st2 st3">Rarely/Never</text>
-</g>
-<g id="Layer_15">
-	<text transform="matrix(1 0 0 1 1421.5708 231.8187)" class="st2 st6">VOTER FREQUENCY</text>
-</g>
-<g id="Layer_14">
-	<text transform="matrix(1.006 0 0 1 319.3569 232.267)" class="st2 st12">RACE</text>
-</g>
-<g id="Layer_44">
-	<circle class="st13" cx="354.52" cy="646.27" r="18"/>
-	<circle class="st14" cx="345.28" cy="1002.97" r="18"/>
-	<circle class="st7" cx="345.28" cy="341.32" r="18"/>
-	<text transform="matrix(1 0 0 1 330.8086 377.269)" class="st2 st3">Black Respondent</text>
-	<rect x="529.45" y="411.07" class="st7" width="4.26" height="1.7"/>
-</g>
-<g id="Layer_43">
-	<text transform="matrix(1 0 0 1 328.3569 682.267)" class="st15 st2 st3">White Respondent</text>
-</g>
-<g id="Layer_42">
-	<circle class="st16" cx="704.38" cy="489.2" r="18"/>
-</g>
-<g id="Layer_41">
-	<text transform="matrix(1 0 0 1 688.3564 520.2672)" class="st2 st3">Female</text>
-</g>
-<g id="Layer_40">
-	<circle class="st16" cx="714.52" cy="745.27" r="18"/>
-</g>
-<g id="Layer_39">
-	<text transform="matrix(1 0 0 1 706.3564 781.267)" class="st2 st3">Male</text>
-</g>
-<g id="Layer_38">
-	<circle class="st16" cx="1048.36" cy="412.27" r="18"/>
-</g>
-<g id="Layer_37">
-	<circle class="st16" cx="1048.36" cy="628.27" r="18"/>
-</g>
-<g id="Layer_36">
-	<circle class="st16" cx="1057.36" cy="853.27" r="18"/>
-</g>
-<g id="Layer_35">
-	<line class="st17" x1="373.36" y1="637.27" x2="688.36" y2="493.27"/>
-</g>
-<g id="Layer_34">
-	<line class="st18" x1="730.68" y1="495.86" x2="1039.93" y2="421.8"/>
-</g>
-<g id="Layer_33">
-	
-		<line onmouseover="updateTooltip('50%')" onmouseout="clearTooltip()" class="st19" x1="706.36" y1="493.27" x2="365.85" y2="631.05"/>
-	
-		<line onmouseover="updateTooltip('51%')" onmouseout="clearTooltip()" class="st20" x1="704.38" y1="480.82" x2="354.52" y2="341.32"/>
-	
-		<line onmouseover="updateTooltip('49%')" onmouseout="clearTooltip()" class="st21" x1="714.52" y1="745.27" x2="345.28" y2="341.32"/>
-	
-		<line onmouseover="updateTooltip('55%')" onmouseout="clearTooltip()" class="st22" x1="345.28" y1="1002.97" x2="714.52" y2="745.27"/>
-	
-		<line onmouseover="updateTooltip('45%')" onmouseout="clearTooltip()" class="st23" x1="345.28" y1="1002.97" x2="706.36" y2="493.27"/>
-	<text transform="matrix(1 0 0 1 309.2329 1029.9404)" class="st2 st3">Hispanic Respondent</text>
-</g>
-<g id="Layer_32">
-	<line onmouseover="updateTooltip('51%')" onmouseout="clearTooltip()" class="st24" x1="370" y1="654.2" x2="706.54" y2="749.05"/>
-</g>
-<g id="Layer_31">
-	<line class="st25" x1="732.52" y1="500.87" x2="1035.28" y2="625.61"/>
-</g>
-<g id="Layer_30">
-	<line class="st26" x1="724.4" y1="494.7" x2="1065.49" y2="835.78"/>
-</g>
-<g id="Layer_29">
-	<rect x="1468.19" y="352.27" class="st16" width="107" height="152"/>
-</g>
-<g id="Layer_28">
-	<text transform="matrix(1 0 0 1 1498.3569 430.267)" class="st2 st3">Always</text>
-</g>
-<g id="Layer_27">
-	<text transform="matrix(1 0 0 1 1498.3569 628.267)" class="st2 st3">Sporadic</text>
-</g>
-<g id="Layer_26">
-	<text transform="matrix(1 0 0 1 1489.3569 826.267)" class="st2 st3">Rarely/never</text>
-</g>
-<g id="Layer_25">
-	<rect x="1468.19" y="746.27" class="st16" width="107" height="152"/>
-</g>
-<g id="Layer_24">
-	<rect x="1468.19" y="549.27" class="st16" width="107" height="152"/>
-</g>
-<g id="Layer_23">
-	<path class="st27" d="M1066.36,403.27l396,9L1066.36,403.27z"/>
-</g>
-<g id="Layer_22">
-	<line class="st28" x1="1055.31" y1="414.22" x2="1462.36" y2="619.27"/>
-</g>
-<g id="Layer_21">
-	<line class="st29" x1="1060.05" y1="420.4" x2="1462.36" y2="826.27"/>
-</g>
-<g id="Layer_20">
-	<path class="st30" d="M1066.36,619.27l396-207L1066.36,619.27z"/>
-</g>
+<polygon onmouseover="z-index: 9999;" class="st13" points="719.8,362.7 815.34,635.36 477.47,720.11 "/>
+<polyline class="st14" points="552.51,675.52 719.8,432.6 809.46,631.97 "/>
+<line class="st15" x1="264.36" y1="157.9" x2="264.36" y2="155.6"/>
+<path id="SVGID_x5F_1_x5F_" class="st15" d="M535.05,327.55c8.94-15.63,26.31-24.13,42.87-31.18
+	c57.94-24.69,120.19-43.1,183.06-39.31c62.87,3.78,126.63,32.72,160.47,85.84"/>
+<text><textPath  xlink:href="#SVGID_x5F_1_x5F_" startOffset="67.3204%">
+</textPath>
+</text>
+<rect x="629.94" y="186.85" class="st15" width="131.04" height="70.2"/>
 </svg>
 
 <!-- end svg code here -->
