--- a/index.html
+++ b/index.html
@@ -230,7 +230,182 @@
 	<h1>How can we get people to vote?</h1>
 	The question of how to increase voter participation in politics has plagued all electoral parties in the last couple of decades. Many voters have seen the effect of this: Get Out The Vote ads, voter registration drives, flooded email inboxes and mailboxes alike. But are voters aware of why they vote in the patterns they do?
 </div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<style type="text/css">
+	.tooltip {
+		font-family:'Helvetica Neue', sans-serif;
+		font-size:1em;
+		font-weight:800;
+		border:0.05em solid #1d1d1d;
+		position:fixed;
+		background-color:white;
+		opacity:0;
+		padding:2%;
+		transition:0.25s ease-in-out;
+	}
+	rect {
+		cursor:pointer;
+		transition:0.25s ease-in-out;
+	}
+	rect:hover {
+		width:3em;
+		height:3em;
+	}
+</style>
+<body>
 
+<!-- insert svg code here -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 28.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.0" onmouseover="updateTooltip('31.03%')" onmouseout="clearTooltip()"
+	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 1080"
+	 style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;}
+	.st1{fill:#8BBBB4;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st2{fill:#AD343E;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st3{fill:#F2AF29;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+	.st4{stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
+</style>
+<g id="Layer_10">
+</g>
+<g id="Layer_1">
+</g>
+<g id="Layer_16">
+	<path onmouseover="updateTooltip('24.86%')" onmouseout="clearTooltip()" class="st0" d="M817.22,560l-143.53,12.46
+		c-6.6,0-83.09-5.86-108.49-5.11l57.46-184.48c25.4-13.96,30.8-19.36,37.4-19.36l166.95-66.7c6.6,0-12.58,72.1-12.58,78.7v155.46
+		C814.43,537.58,823.82,560,817.22,560z"/>
+</g>
+<g id="Layer_15">
+	<path class="st1" d="M869.19,539.43"/>
+</g>
+<g id="Layer_14">
+	<path class="st1" d="M871.56,313.61"/>
+</g>
+<g id="Layer_13">
+	<path onmouseover="updateTooltip('44.11%')" onmouseout="clearTooltip()" class="st0" d="M962.94,868.58l-258.19-19.72
+		c29.44,17.61-134.43-75.84-104.46-115.06l-23.52-89.39c0-6.6,5.4-12,12-12h374.16c6.6,0,52.78,67.74,134.81,72.97l-40.78,149.82
+		C974.94,863.18,969.54,868.58,962.94,868.58z"/>
+</g>
+<g id="Layer_12">
+</g>
+<g id="Layer_11">
+</g>
+<g id="Layer_9">
+	<path d="M1297.71,533.38"/>
+</g>
+<g id="Layer_8">
+	<path id="SVGID_x5F_1_x5F_" class="st0" d="M889.83,230.04c89.53,2.5,178.98,40.92,236.92,109.23
+		c57.94,68.3,81.08,166.63,52.79,251.62c-2.78,8.36-6.04,16.62-7.53,25.3c-1.44,8.37-1.9,18.26-8.92,23.06"/>
+	<text>	<textPath  xlink:href="#SVGID_x5F_1_x5F_" startOffset="25.3094%">
+<tspan  style="font-family:'MyriadPro-Regular'; font-size:48px;">Always</tspan>	</textPath>
+</text>
+	<path id="SVGID_x5F_00000138546731368638969530000014849809884450994329_x5F_" class="st0" d="M540.92,682.69
+		c15.55,51.09,36.93,100.67,63.65,147.69c7.28,12.8,15,25.48,24.84,36.74c25.44,29.1,63.03,46.64,100.03,62.03
+		c42.38,17.62,87.63,33.89,133.97,30.28c12.31-0.96,24.46-3.32,36.4-6.24c70.97-17.35,135.81-55.3,182.95-107.06
+		c18.04-19.81,34.18-43.54,33.03-69.35"/>
+	<text>	<textPath  xlink:href="#SVGID_x5F_00000138546731368638969530000014849809884450994329_x5F_" startOffset="72.1727%">
+<tspan  style="font-family:'MyriadPro-Regular'; font-size:44.1177px;">Sporadic</tspan>	</textPath>
+</text>
+	<path id="SVGID_x5F_00000051358971365980662430000010623863242868738690_x5F_" class="st0" d="M553.09,539.25
+		c-13.08-60.44,14.75-122.48,50.68-172.82c12.47-17.46,26.05-34.23,41.8-48.79c51.93-47.97,127.59-68.88,196.78-54.37"/>
+	<text>	<textPath  xlink:href="#SVGID_x5F_00000051358971365980662430000010623863242868738690_x5F_" startOffset="20.5404%">
+<tspan  style="opacity:0.68; font-family:'MyriadPro-Regular'; font-size:48px;">Rarely/Never</tspan>	</textPath>
+</text>
+	<polyline class="st0" points="612.91,325.04 596.06,325.04 596.06,344.84 612.91,344.84 	"/>
+</g>
+<g id="Layer_7">
+</g>
+<g id="Layer_18">
+	<path onmouseover="updateTooltip('31.03%')" onmouseout="clearTooltip()" class="st0" d="M1123.68,673.59l-200.77-89.76
+		c-6.6,0-51.35-6.72-51.35-13.32l-0.65-150.82c0,0-5.95-124.22,0.65-124.22l191.36,90.87c6.6,0,12,5.4,24.67,20.11l55.45,234.09
+		C1130.38,639.02,1130.28,673.59,1123.68,673.59z"/>
+</g>
+<g id="Layer_6">
+</g>
+<g id="Layer_3">
+</g>
+<g id="Layer_5">
+	<g id="Layer_17">
+	</g>
+</g>
+<g id="Layer_4">
+	<g>
+		<g>
+			<g>
+				<rect x="710.9" y="446.72" class="st2" width="101.31" height="68.49"/>
+				<g>
+					<path class="st2" d="M864.84,564.06H565.2c0-164.49,135.14-299.63,299.63-299.63V564.06z"/>
+				</g>
+			</g>
+			<g>
+				<rect x="803.81" y="693.88" class="st3" width="101.31" height="68.49"/>
+				<g>
+					<path class="st3" d="M864.42,580.88l279.73,107.38c-59.3,154.49-232.62,231.66-387.11,172.35
+						c-118.03-45.31-192.26-153.3-192.26-279.73H864.42z"/>
+				</g>
+			</g>
+			<g>
+				<rect x="907.98" y="419.01" class="st1" width="101.31" height="68.49"/>
+				<g>
+					<path class="st1" d="M876.18,563.96V264.33c165.48,0,299.63,134.15,299.63,299.63c0,39.88-5.61,70.15-19.9,107.38
+						L876.18,563.96z"/>
+				</g>
+			</g>
+		</g>
+		<g>
+			<g>
+			</g>
+			<g>
+			</g>
+			<g>
+			</g>
+		</g>
+	</g>
+	<path class="st4" d="M666.46,434.64"/>
+</g>
+<g id="Layer_2">
+	<path onmouseover="updateTooltip('44.11%')" onmouseout="clearTooltip()" class="st0" d="M972.48,877.58l-258.19-19.72
+		c-51.29-31.75-56.69-37.15-56.69-43.75l-74.7-74.07c0-6.6-15.55-124.33-8.95-124.33l383.58,25.71c6.6,0,12,5.4,12,12l114.92,89.39
+		C1059.69,813.91,922.04,913.92,972.48,877.58z"/>
+</g>
+</svg>
+
+
+<!-- end svg code here -->
+
+<div class="tooltip"></div>
+
+</body>
+<script type="text/javascript">
+
+let tooltip=document.querySelector('.tooltip')
+
+// gets position of mouse on the page
+function getpos(event) {
+	var e = window.event;
+	x = e.clientX ;
+	y = e.clientY ;
+} 
+
+function updateTooltip(text_to_display){
+	tooltip.innerHTML=text_to_display
+	getpos()
+	tooltip.style.opacity=1
+	tooltip.style.left=x+30+"px"
+	tooltip.style.top=y-30+"px"
+}
+
+function clearTooltip() {
+	tooltip.style.opacity=0
+}
+
+</script>
+</html>
 
 <!-- image 1 -->
 <div class='center_aligner'>
